# MasterThesis

./: .gitignore  .pre-commit-config.yaml  Basic_Experiment.ipynb  README.md  data_download.sh  pyproject.toml
code/models/: __init__.py  cde.py  classifiers.py  lmu_torch.py  ode_lstm.py  vae.py
code/transforms/: __init__.py  base_transforms.py  utils.py
experiments/: Basic_Experiment.ipynb  Experiments.ipynb  patch_path.py
mt_code/datasets/: __init__.py  activity.py  p300.py  transforms.py  utils.py
mt_code/models/: __init__.py  cde.py  eegnet.py  erpcov_ts_lr.py  lmu.py  lmu_torch.py  ode_lstm.py
mt_code/runners/: __init__.py  base.py  evaluation.py
